feat(web): adicionar composer autorizado
